# AI_business_Chatbot

./: README.md
backend/: config.py  main.py  main_workflow.ipynb  pyproject.toml  requirements.txt  sql_conversion.ipynb  sql_conversion.py  test_agent.py  test_invoice_routes.py  test_phase5.py
backend/agents/: agent.py  graph.py  state.py
backend/agents/tools/: email_tools.py  invoice_tools.py  task_tools.py
backend/automation/: scheduler.py
backend/database/: client.py
backend/routers/: chatbot_router.py  email_router.py  invoice_router.py  task_router.py
backend/services/: email_services.py  email_test.py  invoice_services.py  invoice_test.py  task_service.py
backend/utils/: email_parser.py  file_handler.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: emails.js  invoices.js  tasks.js
frontend/src/components/: LandingNavbar.jsx  Modal.jsx  Navbar.jsx  ProtectedRoute.jsx  Sidebar.jsx  StatCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Emails.jsx  Invoices.jsx  Landing.jsx  Login.jsx  Signup.jsx  Tasks.jsx
